# GGnote

./: README.md
gagatodo/: .gitignore  next.config.ts  package-lock.json  package.json  server.js
gagatodo/src-tauri/: tauri.conf.json
ggnote/: .gitignore  db.js  error.html  ggnote.db  ipc-handlers.js  main.js  next.config.ts  notes.db  package-lock.json  package.json  preload.js  tauri.d.ts  tsconfig-electron.json  tsconfig.json
ggnote/app/: globals.css  layout.tsx  page.tsx
ggnote/app/api/folders/: route.ts
ggnote/app/api/notes/: route.ts
ggnote/app/api/notes/[id]/: route.ts
ggnote/app/api/upload/: route.ts
ggnote/app/notes/: page.tsx
ggnote/components/: FolderList.tsx  NoteContent.tsx  NoteCreator.tsx  NoteEditor.tsx  NoteList.tsx  NoteViewer.tsx  ResizeableContentEditable.tsx  ToolBar.tsx  app-sidebar.tsx  theme-provider.tsx
ggnote/components/ui/: sidebar.tsx
ggnote/context/: FolderContext.tsx
ggnote/interface/: folderInterface.ts
ggnote/legacy/: FolderList.tsx  NoteCreator.tsx
ggnote/lib/: api.ts  db.ts  folderAPI.ts
ggnote/src-tauri/: Cargo.toml  tauri.conf.json
ggnote/src-tauri/src/: main.rs
ggnote/utils/: EditorUtils.ts
