# src-tauri/Cargo.toml
[package]
name = "ggnote"
version = "0.1.0"
description = "A simple note-taking app"
authors = ["Your Name"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
chrono = "0.4.26"
uuid = { version = "1.4.1", features = ["v4"] }
tauri-plugin-shell = { version = "2.0.0-beta" }
tauri-plugin-dialog = { version = "2.0.0-beta" }
tauri-plugin-fs = { version = "2.0.0-beta" }
tauri-plugin-os = { version = "2.0.0-beta" }

# Add these missing dependencies
log = "0.4"
tauri-plugin-log = { version = "2.0.0-beta" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
